--- a/app/views/rooms/_room_menu.html.erb
+++ b/app/views/rooms/_room_menu.html.erb
@@ -26,13 +26,17 @@
     <span class="pull-right text-babu"><i class="fa fa-check"></i></span>
   </li>
   <li class="sidebar-item">
+    <%= link_to "Life Style", lifestyles_room_path, class: "sidebar-link active" %>
+    <span class="pull-right text-babu"><i class="fa fa-check"></i></span>
+  </li>
+  <li class="sidebar-item">
     <%= link_to "Location", location_room_path, class: "sidebar-link active" %>
     <span class="pull-right text-babu"><i class="fa fa-check"></i></span>
   </li>
 </ul>
 <hr/>
 
-<% is_ready = !@room.active && !@room.price.blank? && !@room.listing_name.blank? && !@room.photos.blank? && !@room.address.blank?  %>
+<% is_ready = !@room.active && !@room.price.blank? && !@room.listing_name.blank? && !@room.photos.blank? && !@room.address.blank?   %>
 
 <%= form_for @room do |f| %>
   <%= f.hidden_field :active, value: true %>
