--- a/app/views/region/_city_selections.html.erb
+++ b/app/views/region/_city_selections.html.erb
@@ -1,6 +1,6 @@
 <select class="citySelect" name="agent[city]" id="agent_state">
   <option value=""></option>
-  <%= cities.each do |city| %>
+  <% cities.each do |city| %>
     <option value="<%= city %>"><%= city %></option>
   <% end %>
 </select>
