--- a/app/views/agents/new.html.erb
+++ b/app/views/agents/new.html.erb
@@ -7,7 +7,11 @@
       <div class="panel-heading">Agents</div>
       <div class="panel-body">
         <div class="container">
-          <%= form_for :agent, url: agents_path do |f| %>
+          <%= form_for :agent, url: agents_path, html: {id: 'agentForm'} do |f| %>
+            <div class="form-group">
+              <label>Select Role</label>
+              <%= f.select :role, @roles.map {|r| [r.name, r.name] }, {}, {class: 'form-control'} %>
+            </div>
             <div class="form-group">
               <label>Email</label>
               <%= f.text_field :email, class: "form-control", placeholder: "email" %>
@@ -22,7 +26,7 @@
             </div>
             <div class="form-group">
               <label>Cover Photo</label>
-              <%= f.file_field :cover_photoe, class: "form-control" %>
+              <%= f.file_field :cover_photo, class: "form-control" %>
             </div>
             <div class="form-group">
               <label>Title</label>
