--- a/app/views/shared/_agent_setting_sidebar.erb
+++ b/app/views/shared/_agent_setting_sidebar.erb
@@ -1,4 +1,8 @@
 <ul class="sidebar-list">
-  <li class="sidebar-item"><%= link_to "Agency Role Settings", agency_roles_path, class: "sidebar-link active" %></li>
-  <li class="sidebar-item"><%= link_to "Agents Management", agents_path, class: "sidebar-link" %></li>
+  <li class="sidebar-item">
+    <a href="<%= agency_roles_path %>" class="sidebar-link <%= current_page?(agency_roles_path) ? 'active' : '' %>">Agency Role Settings</a>
+  </li>
+  <li class="sidebar-item">
+    <a href="<%= agents_path %>" class="sidebar-link <%= current_page?(agents_path) ? 'active' : '' %>">Agents Management</a>
+  </li>
 </ul>
