--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -70,6 +70,7 @@
         <li<% if current_page?(payment_method_path) %> class="active" <% end %> ><%= link_to "Account Settings", payment_method_path %></li>
         <li<% if current_page?(agency_roles_path) %> class="active" <% end %> ><%= link_to "Agent and Agency Role Settings", agency_roles_path %></li>
         <li<% if current_page?(agencies_path) %> class="active" <% end %> ><%= link_to "Agencies", agencies_path %></li>
+        <li<% if current_page?(page_views_path) %> class="active" <% end %> ><%= link_to "Page Views", page_views_path %></li>
       </ul>
     </div>
   </nav>
