--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,29 +1,134 @@
 <div class="row">
-  <div class="col-md-7 banner">
-    <h1><span class="text-red">AirPikachu</span> Book unique homes and experience a city like a local.</h1>
+  <div class="col-md-12 banner">
+    <h1><span class="text-red">Property</span> Search Properties For Sale</h1>
   </div>
-</div>
 
-<%= form_tag search_path, method: :get do %>
-  <div class="row">
-    <div class="col-md-6">
-      <%= text_field_tag :search, params[:search], placeholder: "Where are you going?", class: "form-control", id:"autolocation" %>
-    </div>
-    <div class="col-md-3">
-      <%= text_field_tag :start_date, params[:start_date], placeholder: "Start Date", class: "form-control datepicker" %>
-    </div>
-    <div class="col-md-3">
-      <%= text_field_tag :end_date, params[:end_date], placeholder: "End Date", class: "form-control datepicker" %>
-    </div>
-  </div>
-  <br/><br/>
+   
 
-  <div class="row">
-    <div class="col-md-offset-4 col-md-4">
-      <%= submit_tag "Search", class: "btn btn-normal btn-block" %>
+    
+      
+
+        <%= search_form_for @search, url: search_path, remote: true do |f| %>
+        <div class="row">
+          <div class="col-md-8">
+            <%= text_field_tag :search, params[:search], placeholder: "Search by state, suburb or postcode", class: "form-control", id:"autolocation" %>
+          </div>
+          <div class="col-md-4">
+            <%= submit_tag "Search", class: "btn btn-normal btn-block" %>
+          </div>
+        </div>
+         <hr/>
+        <div class="row">
+          <div class="col-md-offset-4 col-md-4">
+            <button id="filter" class="btn btn-default" data-toggle="collapse" data-target="#collapsePanel">
+              More filters <i class="fa fa-chevron-down"></i>
+            </button>
+          </div>
+        </div>
+        <br>
+        <div class="collapse" id="collapsePanel">
+           <hr/>
+           
+          <div class="row">
+            <div class="col-md-6">
+              <label>Price Range:</label>
+              <div id="slider-range"></div>
+            </div>
+            <div class="col-md-2">
+              <label>Min Price:</label>
+              <%= f.text_field :price_gteq, class: "form-control" %>
+            </div>
+            <div class="col-md-2">
+              <label>Max Price:</label>
+              <%= f.text_field :price_lteq, class: "form-control" %>
+            </div>
+            <div class="col-md-2">
+              <%= f.radio_button :is_rent_eq, 1 %> <label>Rent<label> &nbsp;
+              <%= f.radio_button :is_rent_eq, 0  %> <label>Buy<label>
+            </div>
+          </div>
+          <hr/>
+          <div class="row">
+            <div class="col-md-4">
+              <%= check_box_tag "q[room_type_eq_any][]", "Entire" %> Entire Room
+            </div>
+            <div class="col-md-4">
+              <%= check_box_tag "q[room_type_eq_any][]", "Private" %> Private
+            </div>
+            <div class="col-md-4">
+              <%= check_box_tag "q[room_type_eq_any][]", "Shared" %> Shared
+            </div>
+          </div>
+          <hr/>
+
+          <div class="row">
+            <div class="col-md-4">
+              <div class="form-group select">
+                <label>Accommodate</label>
+                <%= f.select :accommodate_gteq, [["1", 1], ["2", 2], ["3", 3], ["4+", 4]], id: "accommodate", prompt: "Select...", class: "form-control" %>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="form-group select">
+                <label>Bedroom</label>
+                <%= f.select :bed_room_gteq, [["1", 1], ["2", 2], ["3", 3], ["4+", 4]], id: "bed_room", prompt: "Select...", class: "form-control" %>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="form-group select">
+                <label>Bathroom</label>
+                <%= f.select :bath_room_gteq, [["1", 1], ["2", 2], ["3", 3], ["4+", 4]], id: "bath_room", prompt: "Select...", class: "form-control" %>
+              </div>
+            </div>
+            <hr/>
+          </div>
+
+          <div class="row">
+            <div class="col-md-4">
+              <%= check_box_tag "q[is_tv_eq]", true %> TV
+            </div>
+            <div class="col-md-4">
+              <%= check_box_tag "q[is_kitchen_eq]", true %> Kitchen
+            </div>
+            <div class="col-md-4">
+              <%= check_box_tag "q[is_internet_eq]", true %> Internet
+            </div>
+            <div class="col-md-4">
+              <%= check_box_tag "q[is_heating_eq]", true %> Heating
+            </div>
+            <div class="col-md-4">
+              <%= check_box_tag "q[is_air_eq]", true %> Air Conditioning
+            </div>
+          </div>
+          <hr/>
+
+          <div class="row">
+            <div class="col-md-4">
+              <%= check_box_tag "q[is_tv_eq]", true %> Category A
+            </div>
+            <div class="col-md-4">
+              <%= check_box_tag "q[is_kitchen_eq]", true %> Category B
+            </div>
+            <div class="col-md-4">
+              <%= check_box_tag "q[is_internet_eq]", true %> Category C
+            </div>
+            <div class="col-md-4">
+              <%= check_box_tag "q[is_heating_eq]", true %> Category D
+            </div>
+            <div class="col-md-4">
+              <%= check_box_tag "q[is_air_eq]", true %> Category E
+            </div>
+          </div>
+
+        </div>
+        <% end %>
+      <br/>
+
+      <div class="row" id="room_listing">
+        <%= render partial: "rooms/rooms_list", locals: {rooms: @arrRooms} %>
+      </div>
+
     </div>
-  </div>
-<% end %>
 
 <br/><hr/><br/>
 
