--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,11 +1,16 @@
 <div class="row">
   <div class="col-md-3">
+    <div class="panel panel-default">
+
+      <div class="panel-body">
+    
     <ul class="sidebar-list">
       <li class="sidebar-item"><%= link_to "Your Listing", rooms_path, class: "sidebar-link active" %></li>
-      <li class="sidebar-item"><%= link_to "Your Reservations", your_reservations_path, class: "sidebar-link" %></li>
-      <li class="sidebar-item"><%= link_to "Your Trips", your_trips_path, class: "sidebar-link" %></li>
+      <li class="sidebar-item"><%= link_to "Your Favourites", root_path, class: "sidebar-link" %></li>
     </ul>
   </div>
+</div>
+</div>
   <div class="col-md-9">
     <div class="panel panel-default">
       <div class="panel-heading">
