--- a/app/views/packages/index.html.erb
+++ b/app/views/packages/index.html.erb
@@ -1,4 +1,9 @@
-<h3>Admin packages</h1>
+
+        <%= react_component("Packages") %>
+
+
+<hr>
+<h3></h3>
 <p>
     <%= link_to "Create package", new_package_path, :class => 'btn btn-primary' %>
 
