--- a/app/views/admin_rooms/show.html.erb
+++ b/app/views/admin_rooms/show.html.erb
@@ -69,7 +69,7 @@
 
 
   <div>
-    <input type="checkbox" name="active"> approve this propery  <button id="btn-approve" class="btn btn-primary btn-xs">Submit</button>
+    <button id="btn-approve" class="btn btn-primary btn-xs">Approve</button>
   </div>
 
 
