--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -132,43 +132,36 @@
 
     </div>
   </div>
-  <div id="right">
+</div>
+
+<div id="right">
     <!-- GOOGLE MAP -->
 
     <div id="map" style="width: 100%; height: 100%;"></div>
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDbdhrGL62_fFR-hckf74ihwPLkmrZLLSQ"></script>
     <script>
-
       function initialize(rooms) {
         var location = {lat: 44.5403, lng: -78.5463}
-
         if (rooms.length > 0) {
           location = {lat: rooms[0].latitude, lng: rooms[0].longitude}
         }
-
         var map = new google.maps.Map(document.getElementById('map'), {
           center: location,
           zoom: 12
         });
-
         var marker, infowindow;
-
         rooms.forEach(function(room){
           marker = new google.maps.Marker({
             position: {lat: room.latitude, lng: room.longitude},
             map: map
           });
-
           infowindow = new google.maps.InfoWindow({
             content: "<div class='map_price'>$" + room.price + "</div>"
           });
-
           infowindow.open(map, marker);
         });
-
       }
-
       google.maps.event.addDomListener(window, 'load', function () {
         initialize(<%= raw @arrRooms.to_json %>)
       });
@@ -177,6 +170,10 @@
 </div>
 
 <script>
+  // function initialize() {
+
+  // }
+
   $('#start_date').datepicker({
     dateFormat: 'dd-mm-yy',
     minDate: 0,
