--- a/app/views/rooms/_rooms_list.html.erb
+++ b/app/views/rooms/_rooms_list.html.erb
@@ -6,8 +6,8 @@
       </div>
       <div class="panel-body">
         <%= link_to room.listing_name, room %><br/>
-        $<%= room.price %> - <%= room.home_type %> - <%= pluralize(room.bed_room, "bed") %>
-        <div id="star_<%= room.id %>"></div> <%= pluralize(room.average_rating, "review") %>
+        $<%= room.price %> - <%= pluralize(room.bed_room, "bed") %><br/>
+        <%= room.property_type %>
       </div>
     </div>
   </div>
