--- a/app/views/agencies/index.html.erb
+++ b/app/views/agencies/index.html.erb
@@ -17,7 +17,9 @@
             </thead>
             <% @agencies.each do |agency| %>
               <tr>
-                <td><%= agency.name %></td>
+                <td>
+                  <%= link_to agency.name, agency %>
+                </td>
                 <td><%= agency.created_at %></td>
               </tr>
             <% end %>
