--- a/app/views/agencies/new.html.erb
+++ b/app/views/agencies/new.html.erb
@@ -9,12 +9,24 @@
         <div class="container">
           <%= form_for :agency, url: agencies_path do |f| %>
             <div class="form-group">
-              <label>Agent Admin Email</label>
+              <label>Name</label>
+              <%= f.text_field :name, class: "form-control", placeholder: "name" %>
+            </div>
+            <div class="form-group">
+              <label>Admin Email</label>
               <%= f.text_field :email, class: 'form-control', placeholder: "email" %>
             </div>
             <div class="form-group">
-              <label>Name</label>
-              <%= f.text_field :name, class: "form-control", placeholder: "name" %>
+              <label>Contact No.</label>
+              <%= f.text_field :contact_no, class: "form-control", placeholder: "Contact No" %>
+            </div>
+            <div class="form-group">
+              <label>Location</label>
+              <%= f.text_field :location, class: "form-control", placeholder: "Location" %>
+            </div>
+            <div class="form-group">
+              <label>Description</label>
+              <%= f.text_area :description, rows: 5, class: "form-control", placeholder: "Desciption" %>
             </div>
             <%= f.submit :submit, class: "btn btn-normal" %>
           <% end %>
