--- a/app/views/agencies/new.html.erb
+++ b/app/views/agencies/new.html.erb
@@ -25,6 +25,10 @@
               <%= f.text_field :location, class: "form-control", placeholder: "Location" %>
             </div>
             <div class="form-group">
+              <label>Search Visibility</label><br>
+              <%= f.check_box :private %> Private
+            </div>
+            <div class="form-group">
               <label>Description</label>
               <%= f.text_area :description, rows: 5, class: "form-control", placeholder: "Desciption" %>
             </div>
