--- a/app/views/agents/new.html.erb
+++ b/app/views/agents/new.html.erb
@@ -1,77 +1,2 @@
-<div class="row">
-  <div class="col-md-3">
-    <%= render 'shared/agent_setting_sidebar' %>
-  </div>
-  <div class="col-md-9">
-    <div class="panel panel-default">
-      <div class="panel-heading">Agents</div>
-      <div class="panel-body">
-        <div class="container">
-          <%= form_for :agent, url: agents_path, html: {id: 'agentForm'} do |f| %>
-            <div class="form-group">
-              <label>Select Role</label>
-              <%= f.select :role, @roles.map {|r| [r.name, r.name] }, {}, {class: 'form-control'} %>
-            </div>
-            <div class="form-group">
-              <label>Email</label>
-              <%= f.text_field :email, class: "form-control", placeholder: "email" %>
-            </div>
-            <div class="form-group">
-              <label>Name</label>
-              <%= f.text_field :name, class: "form-control", placeholder: "agent name" %>
-            </div>
-            <div class="form-group">
-              <label>Photo</label>
-              <%= f.file_field :photo, class: "form-control" %>
-            </div>
-            <div class="form-group">
-              <label>Cover Photo</label>
-              <%= f.file_field :cover_photo, class: "form-control" %>
-            </div>
-            <div class="form-group">
-              <label>Title</label>
-              <%= f.text_field :title, class: "form-control", placeholder: "Agent's title" %>
-            </div>
-            <div class="form-group">
-              <label>Phone Number</label>
-              <%= f.text_field :phone_number, class: "form-control", placeholder: "Phone name" %>
-            </div>
-            <div class="form-group">
-              <label>How many years of experience</label>
-              <%= f.text_field :years_experience, class: "form-control", placeholder: "5" %>
-            </div>
-            <div class="form-group">
-              <label>Description</label>
-              <%= f.text_area :description, class: "form-control", rows: 10 %>
-            </div>
-            <div class="form-group">
-              <label>Address</label>
-              <%= f.text_field :address, class: "form-control", placeholder: "address" %>
-            </div>
-
-            <div class="form-group">
-              <label>Country</label>
-              <%= f.select :country, CS.countries.map { |k, v| [v, k]}, {include_blank: true}, {class: 'countrySelect'} %>
-            </div>
-
-            <div class="form-group">
-              <label>State/Province</label>
-              <%= f.select :state, [], {}, {class: 'stateSelect'} %>
-            </div>
-
-            <div class="form-group">
-              <label>City</label>
-              <%= f.select :city, [], {}, {class: 'citySelect'} %>
-            </div>
-
-            <%= f.submit :submit, class: "btn btn-normal" %>
-          <% end %>
-          <%= form_for :region, url: region_search_path, remote: true, html: {class: 'selectedRegion', style: 'display: none'} do |f| %>
-            <input class="selectedCountry" name="region[country]" hidden>
-            <input class="selectedState" name="region[state]" hidden>
-          <% end %>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+<%= render "form" %>
+<!-- more refactoring to be done here -->
