--- a/app/views/agents/show.html.erb
+++ b/app/views/agents/show.html.erb
@@ -1,12 +1,18 @@
 <div class="row">
   <div class="col">
     <div class="panel panel-default">
-      <div class="panel-heading"><h1><%= @agent.agency.name %> Agent</h1></div>
+      <div class="panel-heading"><h1>Agent - <%= @agent.agency.name %></h1></div>
       <div class="panel-body">
-          <%= image_tag @agent.cover_photo %> <br>
-          <%= image_tag @agent.photo %> <br>
-          <p><%= @agent.name %></p><br>
-          <p> <strong>Address :</strong> <%= @agent.address %></p>
+          <div>
+            <%= image_tag @agent.cover_photo.url %> <br> <br>
+          </div>
+          <%= image_tag @agent.photo.url %> <br>
+          <h2><%= @agent.name %></h2><br>
+          <p><%= @agent.title %></p><br>
+          <p><strong>Address :</strong> <%= @agent.address %></p>
+          <p><strong>Country :</strong> <%= @agent.country %></p>
+          <p><strong>City :</strong> <%= @agent.city %></p>
+          <p><strong>State :</strong> <%= @agent.state %></p>
           <p><strong>Email :</strong> <%= @agent.email %></p>
           <p><strong>Contact No. :</strong> <%= @agent.phone_number %></p>
           <hr>
