--- a/app/views/agencies/new.html.erb
+++ b/app/views/agencies/new.html.erb
@@ -7,7 +7,7 @@
       <div class="panel-heading">Agencie</div>
       <div class="panel-body">
         <div class="container">
-          <%= form_for :agency, url: agencies_path do |f| %>
+          <%= form_for :agency, url: agencies_path, html: { multipart: true } do |f| %>
             <div class="form-group">
               <label>Name</label>
               <%= f.text_field :name, class: "form-control", placeholder: "name" %>
@@ -17,6 +17,10 @@
               <%= f.text_field :email, class: 'form-control', placeholder: "email" %>
             </div>
             <div class="form-group">
+              <label>Cover photo.</label>
+              <%= f.file_field :cover_photo, class: "form-control" %>
+            </div>
+            <div class="form-group">
               <label>Contact No.</label>
               <%= f.text_field :contact_no, class: "form-control", placeholder: "Contact No" %>
             </div>
@@ -24,10 +28,9 @@
               <label>Location</label>
               <%= f.text_field :location, class: "form-control", placeholder: "Location" %>
             </div>
-            <div class="form-group">
-              <label>Search Visibility</label><br>
-              <%= f.check_box :private %> Private
-            </div>
+
+            <%= render "shared/search_visibility", f: f %>
+            
             <div class="form-group">
               <label>Description</label>
               <%= f.text_area :description, rows: 5, class: "form-control", placeholder: "Desciption" %>
