--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,6 +4,7 @@
 @import "toastr";
 @import "fullcalendar";
 @import "bootstrap-datepicker/bootstrap-datepicker";
+@import "social-share-button";
 
 .select:before {
   top: 10px !important;
