--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -3,7 +3,7 @@
     <div class="panel panel-default">
 
       <div class="panel-body">
-    
+
     <ul class="sidebar-list">
       <li class="sidebar-item"><%= link_to "Your Listing", rooms_path, class: "sidebar-link active" %></li>
       <li class="sidebar-item"><%= link_to "Your Favourites", root_path, class: "sidebar-link" %></li>
@@ -24,7 +24,12 @@
               <%= image_tag room.cover_photo(:thumb) %>
             </div>
             <div class="col-md-7">
-              <h4><%= room.listing_name %></h4>
+              <h4>
+                <%= room.listing_name %>
+                <% if user_signed_in? %>
+                  <%= favourite_link(room) %>
+                <% end %>
+              </h4>
             </div>
             <div class="col-md-3 right">
               <%= link_to "Update", listing_room_path(room), class: "btn btn-form" %>
