--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,167 +1,139 @@
-<div class="row">
-  <div class="col-md-12 banner">
-    <h1><span class="text-red">Property</span> Search Properties For Sale</h1>
-  </div>
-
-  <%= search_form_for @search, url: search_path, remote: true do |f| %>
-
-    <div class="content">
-
-      <div class="row">
-        <div class="col-md-8">
-          <%= text_field_tag :search, params[:search], placeholder: "Search by state, suburb or postcode", class: "form-control", id:"autolocation" %>
-        </div>
-        <div class="col-md-4">
-          <%= submit_tag "Search", class: "btn btn-normal btn-block" %>
-        </div>
+<div class="search">
+  <div class="container"> 
+    <div class="row">
+      <div class="col-sm-offset-2 col-sm-8 banner">
+        <h1><span class="text-red">Property</span> Search Properties For Sale</h1>
       </div>
 
-      <div class="row">
-        <div class="col-md-2">
-          <div class="form-group select">
-            <%= f.select :accommodate_gteq, Room::ACCOMADATION_TYPES.map{|k, v| [v, k]}, { id: "accommodate_gteq", prompt: "All property types" }, { class: "form-control no-border-form-control" } %>
-          </div>
-        </div>
-        <div class="col-md-2">
-          <div class="form-group select">
-            <%= f.select :bed_room_gteq, Room::BED_ROOMS.map{|k, v| [v, k]}, { id: "bed_room_lteq", prompt: "Beds (min)" }, { class: "form-control no-border-form-control" } %>
-          </div>
-        </div>
-        <div class="col-md-2">
-          <div class="form-group select">
-            <%= f.select :bed_room_lteq, Room::BED_ROOMS.map{|k, v| [v, k]}, { id: "bed_room_gteq", prompt: "Beds (max)" }, { class: "form-control no-border-form-control" } %>
-          </div>
-        </div>
-        <div class="col-md-2">
-          <div class="form-group select">
-            <%= f.select :bath_room_gteq, Room::BATH_ROOMS.map{|k, v| [v, k]}, { id: "bath_room_gteq", prompt: "Bathrooms" }, { class: "form-control no-border-form-control" } %>
-          </div>
-        </div>
+      <%= search_form_for @search, url: search_path, remote: true do |f| %>
 
-        <div class="col-md-2">
-          <div class="form-group">
-            <%= f.select :price_gteq, Room::PRICES.map{|k, v| [v, k]}, { id: "price_lteq", prompt: "Price (min)" }, { class: "form-control no-border-form-control" } %>
-          </div>
-        </div>
+        <div class="content col-sm-offset-2 col-sm-8">
+          <div class="panel panel-default">
+            <div class="panel-body">
+              <%= render partial: "pages/filter", locals: { f: f } %>
 
-        <div class="col-md-2">
-          <div class="form-group">
-            <%= f.select :price_lteq, Room::PRICES.map{|k, v| [v, k]}, { id: "price_gteq", prompt: "Price (max)" }, { class: "form-control no-border-form-control" } %>
-          </div>
-        </div>
-
-        <div class="col-md-2">
-          <div class="form-group">
-            <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">More filters</button>
-          </div>
-        </div>
-
-        <div id="myModal" class="modal fade" role="dialog">
-          <div class="modal-dialog">
-
-            <!-- Modal content-->
-            <div class="modal-content">
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">More filters</h4>
-              </div>
-              <div class="modal-body">
-
-                <div class="row">
-                  <div class="col-md-4">
-                    <%= check_box_tag "q[is_tv_eq]", true %> TV
-                  </div>
-                  <div class="col-md-4">
-                    <%= check_box_tag "q[is_kitchen_eq]", true %> Kitchen
-                  </div>
-                  <div class="col-md-4">
-                    <%= check_box_tag "q[is_internet_eq]", true %> Internet
+              <div class="row">
+                <div class="col-md-2">
+                  <div class="form-group">
+                    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">More filters</button>
                   </div>
                 </div>
 
-                <div class="row">
-                  <div class="col-md-4">
-                    <%= check_box_tag "q[is_heating_eq]", true %> Heating
-                  </div>
-                  <div class="col-md-4">
-                    <%= check_box_tag "q[is_air_eq]", true %> Air Conditioning
-                  </div>
-                </div>
+                <div id="myModal" class="modal fade" role="dialog">
+                  <div class="modal-dialog">
 
-                <div class="row">
-                  <div class="col-md-12">
-                    <hr />
-                  </div>
-                </div>
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">More filters</h4>
+                      </div>
+                      <div class="modal-body">
 
-                <div class="row">
-                  <div class="col-md-4">
-                    <%= check_box_tag "q[room_type_eq_any][]", "Entire" %> Entire Room
-                  </div>
-                  <div class="col-md-4">
-                    <%= check_box_tag "q[room_type_eq_any][]", "Private" %> Private
-                  </div>
-                  <div class="col-md-4">
-                    <%= check_box_tag "q[room_type_eq_any][]", "Shared" %> Shared
+                        <div class="row">
+                          <div class="col-md-4">
+                            <%= check_box_tag "q[is_tv_eq]", true %> TV
+                          </div>
+                          <div class="col-md-4">
+                            <%= check_box_tag "q[is_kitchen_eq]", true %> Kitchen
+                          </div>
+                          <div class="col-md-4">
+                            <%= check_box_tag "q[is_internet_eq]", true %> Internet
+                          </div>
+                        </div>
+
+                        <div class="row">
+                          <div class="col-md-4">
+                            <%= check_box_tag "q[is_heating_eq]", true %> Heating
+                          </div>
+                          <div class="col-md-4">
+                            <%= check_box_tag "q[is_air_eq]", true %> Air Conditioning
+                          </div>
+                        </div>
+
+                        <div class="row">
+                          <div class="col-md-12">
+                            <hr />
+                          </div>
+                        </div>
+
+                        <div class="row">
+                          <div class="col-md-4">
+                            <%= check_box_tag "q[room_type_eq_any][]", "Entire" %> Entire Room
+                          </div>
+                          <div class="col-md-4">
+                            <%= check_box_tag "q[room_type_eq_any][]", "Private" %> Private
+                          </div>
+                          <div class="col-md-4">
+                            <%= check_box_tag "q[room_type_eq_any][]", "Shared" %> Shared
+                          </div>
+                        </div>
+
+                      </div>
+                    </div>
+
                   </div>
                 </div>
 
               </div>
             </div>
-
           </div>
         </div>
 
-      </div>
-
+      <% end %>
     </div>
+  </div>
+</div>
 
-    <div class="row">
-
-      <div class="row" id="room_listing">
-        <%= render partial: "rooms/rooms_list", locals: {rooms: @arrRooms} %>
-      </div>
-
+<div class="container">
+  <h3>Properties of the Week</h3>
+  <br/>
+  <div class="row">
+    <div class="col-sm-8">
+      <ul class="media-list room-list" id="room_listing">
+        <%= render partial: "rooms/media_list", locals: {rooms: @arrRooms} %>
+      </ul>
     </div>
-  <% end %>
-</div>
-
-
-<!-- HOMES -->
-<div><h3>Homes</h3></div>
-<br/>
-
-<div class="row">
-  <%= render partial: "rooms/rooms_list", locals: {rooms: @arrRooms} %>
-</div>
-
-<!-- CITIES -->
-<div><h3>Cities</h3></div>
-<br/>
-
-<div class="row">
-  <div class="col-md-3 col-sm-12">
-    <a href="http://localhost:3000/search?utf8=%E2%9C%93&search=los+angeles">
-      <div class="discovery-card" style="background-image: url('/assets/LA.jpg')"></div>
-    </a>
-  </div>
-  <div class="col-md-3 col-sm-12">
-    <a href="http://localhost:3000/search?utf8=%E2%9C%93&search=london">
-      <div class="discovery-card" style="background-image: url('/assets/LD.jpg')"></div>
-    </a>
-  </div>
-  <div class="col-md-3 col-sm-12">
-    <a href="http://localhost:3000/search?utf8=%E2%9C%93&search=paris">
-      <div class="discovery-card" style="background-image: url('/assets/PR.jpg')"></div>
-    </a>
-  </div>
-  <div class="col-md-3 col-sm-12">
-    <a href="http://localhost:3000/search?utf8=%E2%9C%93&search=miami">
-      <div class="discovery-card" style="background-image: url('/assets/MI.jpg')"></div>
-    </a>
+    <div class="col-sm-4"></div>
   </div>
 </div>
 
+<div class="container">
+  <!-- HOMES -->
+  <div><h3>Homes</h3></div>
+  <br/>
+
+  <div class="row">
+    <%= render partial: "rooms/rooms_list", locals: {rooms: @arrRooms} %>
+  </div>
+
+  <!-- CITIES -->
+  <div><h3>Cities</h3></div>
+  <br/>
+
+  <div class="row">
+    <div class="col-md-3 col-sm-12">
+      <a href="http://localhost:3000/search?utf8=%E2%9C%93&search=los+angeles">
+        <div class="discovery-card" style="background-image: url('/assets/LA.jpg')"></div>
+      </a>
+    </div>
+    <div class="col-md-3 col-sm-12">
+      <a href="http://localhost:3000/search?utf8=%E2%9C%93&search=london">
+        <div class="discovery-card" style="background-image: url('/assets/LD.jpg')"></div>
+      </a>
+    </div>
+    <div class="col-md-3 col-sm-12">
+      <a href="http://localhost:3000/search?utf8=%E2%9C%93&search=paris">
+        <div class="discovery-card" style="background-image: url('/assets/PR.jpg')"></div>
+      </a>
+    </div>
+    <div class="col-md-3 col-sm-12">
+      <a href="http://localhost:3000/search?utf8=%E2%9C%93&search=miami">
+        <div class="discovery-card" style="background-image: url('/assets/MI.jpg')"></div>
+      </a>
+    </div>
+  </div>
+</div>
 <script>
   function initialize() {
 
@@ -188,5 +160,18 @@
 
   $(function () {
     $("#autolocation").geocomplete();
+    $("#link-more-options").click(function(e) {
+      e.preventDefault();
+      if ($("#search-more-options").css('display') == 'none') {
+        $("#search-more-options").show();
+        $(this).find('.fa-angle-down').show();
+        $(this).find('.fa-angle-up').hide();
+      } else {
+        $("#search-more-options").hide();
+        $(this).find('.fa-angle-down').hide();
+        $(this).find('.fa-angle-up').show();
+      }
+      return false;
+    });
   });
 </script>
