--- a/app/views/rooms/_rooms_list.html.erb
+++ b/app/views/rooms/_rooms_list.html.erb
@@ -5,15 +5,19 @@
         <%= image_tag room.cover_photo(:medium) %>
       </div>
       <div class="panel-body">
-        <%= link_to room.listing_name, room %><br/>
+        <%= link_to room.listing_name, room %><br/><br/>
         $<%= room.price %> - <%= room.home_type %> - <%= pluralize(room.bed_room, "bed") %>
-        <div id="star_<%= room.id %>"></div> <%= pluralize(room.average_rating, "review") %>
+        <div>
+          <div id="star_room_<%= room.id %>"></div> <%= pluralize(room.average_rating, "review") %>
+        </div>
+        <br/>
+        <a class="btn btn-default btn-readmore">Read more</a>
       </div>
     </div>
   </div>
 
   <script>
-    $('#star_<%= room.id %>').raty({
+    $('#star_room_<%= room.id %>').raty({
       path: '/assets',
       readOnly: true,
       score: <%= room.average_rating %>
