--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <!-- Static navbar -->
 <nav class="navbar navbar-default navbar-static-top" style="margin-bottom: 0px">
-  <div class="container-fluid">
+  <div class="container container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
         <span class="sr-only">Toggle navigation</span>
@@ -8,10 +8,25 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to "PropertyListing", root_path, class: "navbar-brand" %>
+      <%= link_to "Property Listing", root_path, class: "navbar-brand" %>
     </div>
-    <div id="navbar" class="navbar-collapse collapse">
 
+    <div id="navbar" class="navbar-collapse collapse">
+      
+      <ul class="nav navbar-nav navbar-menu navbar-left">
+        <li class="active">
+           <%= link_to "Buy", root_path %>
+        </li>
+        <li>
+           <%= link_to "Rent", root_path %>
+        </li>
+        <li>
+           <%= link_to "New homes", root_path %>
+        </li>
+        <li>
+           <%= link_to "Sold", root_path %>
+        </li>
+      </ul>
 
       <ul class="nav navbar-nav navbar-right">
 
@@ -23,6 +38,7 @@
 
         <% if !user_signed_in? %>
           <li><%= link_to "Login", new_user_session_path, class: "black" %></li>
+          <li class="separator">/</li>
           <li><%= link_to "Sign Up", new_user_registration_path, class: "black" %></li>
         <% else %>
           <li>
