--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -490,7 +490,7 @@ a.black {
 }
 
 .pages-index .search{
-  background: url('images/banner-bg.jpg') no-repeat;
+  background: url('/assets/banner-bg.jpg') no-repeat;
   background-size: 100% 100%;
   padding: 30px 0 50px;
 }
