--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -12,7 +12,7 @@
 
       <div class="row">
         <div class="col-md-offset-4 col-md-4">
-          <button id="filter" class="btn btn-default" data-toggle="collapse" data-target="#collapsePanel">
+          <button id="filter" class="btn btn-default">
             More filters <i class="fa fa-chevron-down"></i>
           </button>
         </div>
@@ -33,10 +33,6 @@
             <div class="col-md-2">
               <label>Max Price:</label>
               <%= f.text_field :price_lteq, class: "form-control" %>
-            </div>
-            <div class="col-md-2">
-              <%= f.radio_button :is_rent_eq, 1 %> <label>Rent<label> &nbsp;
-              <%= f.radio_button :is_rent_eq, 0  %> <label>Buy<label>
             </div>
           </div>
           <hr/>
@@ -201,11 +197,14 @@
 
   $('#filter').click(function(){
     if (open) {
+      $('#collapsePanel').show();
       $('#filter').html("More filters <i class='fa fa-chevron-up'></i>")
     } else {
+      $('#collapsePanel').hide();
       $('#filter').html("More filters <i class='fa fa-chevron-down'></i>")
     }
     open = !open;
+    return false
   });
 </script>
 
